# smart-travel-assistant

./: .env.example  .gitignore  README.md  debug_map_app.py  debug_map_generator.py  generate_schema_output.py  langgraph.json  output_debug_map.html  pyproject.toml
data/: travel_memory.sqlite
src/travel_assistant/: __init__.py  config.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
src/travel_assistant/backend/: config.py  graph.py  mcp_client.py  prompts.py  schemas.py  state.py  tools.py
src/travel_assistant/backend/agents/: nodes.py  tools.py
src/travel_assistant/backend/memory/: checkpointer.py
src/travel_assistant/backend/tools/: calculator.py
src/travel_assistant/frontend/: amap_component.py  app.py
tests/: __init__.py  check_mcp.py  test_budget_calculator.py  test_full_graph.py  test_graph.py  test_input_processing.py  test_mcp_integration.py  test_memory_flow.py  test_planner_manual.py  test_re_planning.py  test_refinement_flow.py  test_response_generation.py  test_sub_agents.py  test_weather_planner.py
